# AssortmentOfProjectsNotDone

./: .gitignore  README.md  create-project.sh
BH_AutoHitter_Project/: .gitignore  PROJECT_INFO.md  PUSH_TO_GITHUB.md  README.md
BH_AutoHitter_Project/chrome_extension/: manifest.json  package-lock.json  settings.html  uuid_store.json
BH_AutoHitter_Project/chrome_extension/assets/styles/: customStripeStyles.css  settings.css
BH_AutoHitter_Project/integration/: COMPLETE_SETUP.md  SETUP_GUIDE.md  bot_demo_simple.py  requirements.txt  skybin_bh_api.rs  telegram_bot.py  telegram_bot_demo.py  web_api_integration.js
example-web-scraper/: .gitignore  README.md
telegram-bin-scraper/: Cargo.toml  PROJECT_INFO.md  README.md  config.toml.example
telegram-bin-scraper/python-enhancements/: enhanced_formatter.py  external_api_server.py  human_simulator.py  telegram_bot.py
telegram-bin-scraper/src/: bin_detector.rs  config.rs  formatter.rs  main.rs  stealth.rs  telegram.rs
