[package]
name = "bin-scraper"
version = "1.0.0"
edition = "2021"

[dependencies]
# Telegram
grammers-client = "0.5"
grammers-session = "0.5"
grammers-tl-types = "0.5"

# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP
reqwest = { version = "0.11", features = ["json"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Regex for pattern matching
regex = "1.10"
once_cell = "1.19"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Time
chrono = "0.4"

# Configuration
dotenv = "0.15"

# BIN validation (Luhn algorithm)
luhn = "1.0"

# Database for tracking
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite"] }